# the-seed-utils

./: Build.js  Certificates.js  Config.js  Dependencies.js  LibraryDependencies.js  Project.js  README.md  ResourcePak.js  Skeleton.js  build_libraries.js  build_resourcepak.js  cert_config.js  check_deps.js  create_component.js  create_config.js  create_program.js  create_project.js  create_resourcepak.js  create_system.js  package-lock.json  package.json
skeletons/: component.tar  program.tar  system.tar
skeletons/component/: .gitignore  configure.ac
skeletons/component/src/: Makefile.am  SKELETON.cpp  SKELETON.hpp
skeletons/program/: AUTHORS  configure.ac
skeletons/program/src/: Makefile.am  SKELETON.cpp  SKELETON.hpp
skeletons/system/: configure.ac
skeletons/system/src/: Makefile.am  SKELETON.cpp  SKELETON.hpp
